# Open-Ollama-RAG-ChatApp

./: .gitignore  LICENSE  RAG-App-Notebook.ipynb  README.md  pyproject.toml
data/: AliceImWonderland.md
